add_payment: fixed accountID
