# api/proto/payment/v1/payment.swagger.json
@@ -19,7 +19,7 @@
     "/payment/api/v1/payment": {
       "post": {
         "summary": "Create Payments. Payment can be created with positive or negative value.\nPayments are made only in rubles(RUB).",
-        "description": "```\nExample request:\n   sum: '99.99'\n   company_name: 'AppStore'\n   category: 'supermarkets'\n   user_id: 1                // query param\n   account_id: 1\n   account_number: '123456'\n```\n\n```\nExample response:\n   empty\nSpecific codes:\n   * codes.InvalidArgument",
+        "description": "```\nExample request:\n   sum: {\n\t\t  'value': '1000'\n\t  }\n   company_name: 'AppStore'\n   category: 'supermarkets'\n   user_id: 1\n   account_number: '123456'\n```\n\n```\nExample response:\n   empty\nSpecific codes:\n   * codes.InvalidArgument",
         "operationId": "PaymentAPI_CreatePayment",
         "responses": {
           "200": {
@@ -53,7 +53,7 @@
     "/payment/api/v1/payment/accounts": {
       "get": {
         "summary": "Get accounts by user id. Without paging and filters.",
-        "description": "```\nExample request:\n   user_id: 1 // path params\n```\n\n```\nExample response:\n   balance: '99.99'\n   currency: 'RUB'\n   account_number: '123'\n```\n\nSpecific codes:\n   * codes.InvalidArgument\n   * codes.NotFound",
+        "description": "```\nExample request:\n   user_id: 1 // path params\n```\n\n```\nExample response:\n   balance: {\n\t\t  'value': '1000'\n\t  }\n   currency: 'RUB'\n   account_number: '123'\n```\n\nSpecific codes:\n   * codes.InvalidArgument\n   * codes.NotFound",
         "operationId": "PaymentAPI_GetAccountsByUserID",
         "responses": {
           "200": {
@@ -83,11 +83,11 @@
         ]
       }
     },
-    "/payment/api/v1/payment/accounts/{userId}": {
+    "/payment/api/v1/payment/accounts/{accountNumber}": {
       "get": {
         "summary": "Get user account balance by user ID.\nBy default the balance is given in rubles, if you want to convert the amount into another currency,\npass in query parameter ?currency={another_currency} another currency.\nThe name of the other currency should consist of 3 letters",
-        "description": "```\nExample request:\n   id: 1           // path param\n   currency: 'USD' // query param\n```\n\n```\nExample response:\n   user_id: 1\n   sum: '99.99'\n   currency: 'USD'\n```\n\nSpecific codes:\n   * codes.InvalidArgument\n   * codes.NotFound",
-        "operationId": "PaymentAPI_GetAccountByUserID",
+        "description": "```\nExample request:\n   account_number: '123' // path param\n   currency: 'USD'       // query param\n```\n\n```\nExample response:\n   user_id: 1\n   sum: {\n\t\t  'value': '1000'\n\t  }\n   currency: 'USD'\n```\n\nSpecific codes:\n   * codes.InvalidArgument\n   * codes.NotFound",
+        "operationId": "PaymentAPI_GetAccountByAccountNumber",
         "responses": {
           "200": {
             "description": "A successful response.",
@@ -104,11 +104,10 @@
         },
         "parameters": [
           {
-            "name": "userId",
+            "name": "accountNumber",
             "in": "path",
             "required": true,
-            "type": "string",
-            "format": "int64"
+            "type": "string"
           },
           {
             "name": "currency",
@@ -125,7 +124,7 @@
     "/payment/api/v1/payment/transfer": {
       "post": {
         "summary": "Transferring money between users.\nTransferring money are made only in rubles(RUB).\nIf you try to transfer money to a user who does not exist or to a non-existent account, an error will be returned.",
-        "description": "```\nExample request:\n   sum: '99.99'\n   sender_id: 1\n   sender_account_id: 1\n   sender_account_number: '123'\n   recipient_id: 2\n   recipient_account_id: 1\n   recipient_account_number: '123'\n   recipient_name: 'Artem'\n```\n\n```\nExample response:\n   sum: '99.99'\n   recipient_id: 2\n   recipient_name: 'Artem'\n```\n\nSpecific codes:\n   * codes.InvalidArgument\n   * codes.NotFound",
+        "description": "```\nExample request:\n   sum: {\n\t\t  'value': '1000'\n\t  }\n   sender_id: 1\n   sender_account_id: 1\n   sender_account_number: '123'\n   recipient_id: 2\n   recipient_account_id: 1\n   recipient_account_number: '123'\n   recipient_name: 'Artem'\n```\n\n```\nExample response:\n   sum: {\n\t\t  'value': '1000'\n\t  }\n   recipient_id: 2\n   recipient_name: 'Artem'\n```\n\nSpecific codes:\n   * codes.InvalidArgument\n   * codes.NotFound",
         "operationId": "PaymentAPI_TransferBetweenUsers",
         "responses": {
           "200": {
@@ -156,11 +155,11 @@
         ]
       }
     },
-    "/payment/api/v1/payment/{userId}/history": {
+    "/payment/api/v1/payment/{accountNumber}/history": {
       "get": {
         "summary": "Get payments history by account id.\nQuery params:\n- limit (default = 100)\n- offset (default = 0)\n- sort (only 'sum' and 'create_at', default = 'creat_at')\n- order_by (only 'asc' or 'desc', default = 'desc')",
-        "description": "```\nExample request:\n   user_id: 1      // path params\n   limit: 5        // query params\n   offset: 0       // query params\n   sort: create_at // query params\n   order_by: desc  // query params\n```\n\n```\nExample response:\n   id: 1\n   create_at: // FIXME: fix example time\n   sum: '99.99'\n   company_name: 2\n   category: 'Artem'\n   total: 1\n```\n\nSpecific codes:\n   * codes.InvalidArgument\n   * codes.NotFound",
-        "operationId": "PaymentAPI_GetPaymentsHistoryByAccountID",
+        "description": "```\nExample request:\n   account_id: 1      // path params\n   limit: 5        // query params\n   offset: 0       // query params\n   sort: create_at // query params\n   order_by: desc  // query params\n```\n\n```\nExample response:\n   account_number: 1 // path param\n   create_at: // FIXME: fix example time\n   sum: {\n\t\t  'value': '1000'\n\t  }\n   company_name: 2\n   category: 'Artem'\n   total: 1\n```\n\nSpecific codes:\n   * codes.InvalidArgument\n   * codes.NotFound",
+        "operationId": "PaymentAPI_GetPaymentsHistoryByAccountNumber",
         "responses": {
           "200": {
             "description": "A successful response.",
@@ -177,18 +176,10 @@
         },
         "parameters": [
           {
-            "name": "userId",
+            "name": "accountNumber",
             "in": "path",
             "required": true,
-            "type": "string",
-            "format": "int64"
-          },
-          {
-            "name": "accountId",
-            "in": "query",
-            "required": false,
-            "type": "string",
-            "format": "int64"
+            "type": "string"
           },
           {
             "name": "limit",
@@ -215,6 +206,13 @@
             "in": "query",
             "required": false,
             "type": "string"
+          },
+          {
+            "name": "userId",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "int64"
           }
         ],
         "tags": [
@@ -291,10 +289,6 @@
           "type": "string",
           "format": "int64"
         },
-        "accountId": {
-          "type": "string",
-          "format": "int64"
-        },
         "accountNumber": {
           "type": "string"
         }
@@ -306,10 +300,6 @@
     "v1GetAccountByUserIDResponse": {
       "type": "object",
       "properties": {
-        "userId": {
-          "type": "string",
-          "format": "int64"
-        },
         "balance": {
           "$ref": "#/definitions/typeDecimal"
         },
@@ -369,10 +359,6 @@
         },
         "category": {
           "type": "string"
-        },
-        "accountId": {
-          "type": "string",
-          "format": "int64"
         }
       }
     },
